# BacktestingCopilot

./: .env.example  .gitignore  PRD-Ai.md  PRD.md  README.md  pyproject.toml  requirements.txt
docs/: testing-guide.md  投資分析pormpt.md
docs/learn/: code-reading-map.md  first-class-functions-and-dependency-injection.md
docs/superpowers/plans/: 2026-06-15-agentic-optimizer.md  2026-06-15-rnn-regime-classifier.md  2026-06-20-nextjs-fastapi-frontend.md
docs/superpowers/specs/: 2026-06-09-backtesting-copilot-mvp-design.md  2026-06-13-agentic-optimizer-design.md  2026-06-15-rnn-regime-classifier-design.md  2026-06-17-v2-paper-trading-core-design.md  2026-06-20-fundamental-analysis-rag-design.md  2026-06-20-nextjs-frontend-design.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/src/components/: BacktestForm.tsx  BacktestResult.tsx  OptimizerForm.tsx  OptimizerResult.tsx
frontend/src/lib/: api.ts  types.ts
src/backtesting_copilot/: __init__.py  config.py  models.py
src/backtesting_copilot/ai/: __init__.py  advisor.py  analyst.py  optimizer.py  provider.py
src/backtesting_copilot/app/: runner.py  streamlit_app.py
src/backtesting_copilot/backtest/: engine.py  (+2 more)
tests/: test_advisor_regime.py  test_api_advisor.py  test_api_backtest.py  test_api_errors.py  test_api_optimize.py  test_api_schemas.py  test_backtest_engine.py  test_ml_classifier.py  test_ml_dataset.py  test_ml_labeling.py  test_optimizer.py  test_providers.py  test_runner.py  test_runner_optimizer.py  test_scaffold.py  test_storage.py
tests/fixtures/: E2E.csv
(+30 files in other folders)
