[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesting-copilot"
version = "0.1.0"
description = "AI Dual-Strategy Asset Allocation & Backtesting Copilot (V1 MVP)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.40",
    "streamlit>=1.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40",
    "openai>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
source = ["backtesting_copilot"]
